use euse -E instead of make.conf

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,10 +1,10 @@
 FROM scratch
 ARG STAGEFILE
 ADD ${STAGEFILE} /
-ADD make.conf /etc/portage/
 ADD package.use/rsync /etc/portage/package.use/
 ADD bashrc /root/.bashrc
 ENTRYPOINT ["bash"]
+RUN ["euse", "-E", "bindist"]
 RUN ["bash", "-c", "if ! mountpoint /var/db/repos/gentoo; then emerge-webrsync; fi"]
 RUN ["eselect", "news", "read", "--quiet"]
 RUN ["bash", "-i", "-c", "emerge -vuDUN @world"]
