add missing depclean & preserved-rebuild

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -9,5 +9,7 @@ RUN eselect news read --quiet
 RUN bash -i -c "emerge -u gentoolkit"
 RUN euse -E bindist
 RUN bash -i -c "emerge -vuDUN @world"
+RUN bash -i -c "emerge --depclean"
+RUN bash -i -c "emerge @preserved-rebuild"
 RUN bash -c "if ! mountpoint /var/db/repos/gentoo; then rm -rf /var/db/repos/gentoo; fi"
 RUN bash -c "if ! mountpoint /var/cache/distfiles; then rm -rf /var/cache/distfiles/*; fi"
