add git to devtools

--- a/devtools/Dockerfile
+++ b/devtools/Dockerfile
@@ -6,6 +6,6 @@ RUN eselect news read --quiet
 RUN bash -i -c "emerge -uDUN @world"
 RUN bash -i -c "emerge --depclean"
 RUN bash -i -c "emerge @preserved-rebuild"
-RUN bash -i -c "emerge -u sys-devel/clang dev-lang/rust app-portage/repoman app-eselect/eselect-repository dev-lang/go"
+RUN bash -i -c "emerge -u dev-vcs/git sys-devel/clang dev-lang/rust app-portage/repoman app-eselect/eselect-repository dev-lang/go"
 RUN bash -c "if ! mountpoint /var/db/repos/gentoo; then rm -rf /var/db/repos/gentoo; fi"
 RUN bash -c "if ! mountpoint /var/cache/distfiles; then rm -rf /var/cache/distfiles/*; fi"
