--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -5,7 +5,7 @@ ADD package.use/rsync /etc/portage/package.use/
 ADD bashrc /root/.bashrc
 ENTRYPOINT bash
 RUN bash -c "echo "EMERGE_DEFAULT_OPTS="--quiet --verbose --autounmask --autounmask-continue"" >> /etc/portage/make.conf"
-RUN mkdir -p /etc/portage/make.conf
+RUN mkdir -p /etc/portage/repos.conf
 RUN bash -c "if ! mountpoint /var/db/repos/gentoo; then emerge-webrsync; fi"
 RUN eselect news read --quiet
 RUN bash -i -c "emerge -u gentoolkit"
