fix missing quotes at EMERGE_DEFAULT_OPTS

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -4,7 +4,7 @@ ADD ${STAGEFILE} /
 ADD package.use/rsync /etc/portage/package.use/
 ADD bashrc /root/.bashrc
 ENTRYPOINT bash
-RUN bash -c "echo "EMERGE_DEFAULT_OPTS="--quiet --verbose --autounmask --autounmask-continue"" >> /etc/portage/make.conf"
+RUN bash -c "echo "EMERGE_DEFAULT_OPTS=""--quiet --verbose --autounmask --autounmask-continue"" >> /etc/portage/make.conf""
 RUN mkdir -p /etc/portage/repos.conf
 RUN bash -c "if ! mountpoint /var/db/repos/gentoo; then emerge-webrsync; fi"
 RUN eselect news read --quiet
