add option to set profile & set default

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,5 +1,6 @@
 FROM scratch
 ARG STAGEFILE
+ARG PROFILE
 ADD ${STAGEFILE} /
 ADD package.use/rsync /etc/portage/package.use/
 ADD bashrc /root/.bashrc
@@ -7,6 +8,7 @@ ENTRYPOINT bash
 RUN bash -c "echo "EMERGE_DEFAULT_OPTS=""--quiet --verbose --autounmask --autounmask-continue"" >> /etc/portage/make.conf""
 RUN mkdir -p /etc/portage/repos.conf
 RUN bash -c "if ! mountpoint /var/db/repos/gentoo; then emerge-webrsync; fi"
+RUN eselect profile set ${PROFILE}
 RUN eselect news read --quiet
 RUN bash -i -c "emerge -u gentoolkit"
 RUN euse -E bindist
