set entrypoint to bash -i -c to clean up RUN syntax

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -4,21 +4,21 @@ ARG PROFILE
 ADD ${STAGEFILE} /
 ADD package.use/rsync /etc/portage/package.use/
 ADD bashrc /root/.bashrc
-ENTRYPOINT bash
+ENTRYPOINT bash -i -c
 # I could not get it to work with >> , bash gods are welcomed to submit a cleaner implementation
-RUN bash -c "echo EMERGE_DEFAULT_OPTS >> /etc/portage/make.conf"
+RUN echo EMERGE_DEFAULT_OPTS >> /etc/portage/make.conf
 RUN sed -i "/EMERGE_DEFAULT_OPTS/c\EMERGE_DEFAULT_OPTS=\"--quiet --verbose --autounmask --autounmask-continue\"" /etc/portage/make.conf
 RUN sed -i "/PORTDIR=.*/c\PORTDIR=\"/var/db/repos/gentoo\"" /etc/portage/make.conf
 RUN sed -i "/DISTDIR=.*/c\DISTDIR=\"/var/cache/distfiles\"" /etc/portage/make.conf
 RUN sed -i "/PKGDIR=.*/c\PKGDIR=\"/var/cache/binpkgs\"" /etc/portage/make.conf
 RUN mkdir -p /etc/portage/repos.conf
-RUN bash -c "if ! mountpoint /var/db/repos/gentoo; then emerge-webrsync; fi"
+RUN if ! mountpoint /var/db/repos/gentoo; then emerge-webrsync; fi
 RUN eselect profile set ${PROFILE}
 RUN eselect news read --quiet
-RUN bash -i -c "emerge -u gentoolkit"
+RUN emerge -u gentoolkit
 RUN euse -E bindist
-RUN bash -i -c "emerge -uDUN @world"
-RUN bash -i -c "emerge --depclean"
-RUN bash -i -c "emerge @preserved-rebuild"
-RUN bash -c "if ! mountpoint /var/db/repos/gentoo; then rm -rf /var/db/repos/gentoo; fi"
-RUN bash -c "if ! mountpoint /var/cache/distfiles; then rm -rf /var/cache/distfiles/*; fi"
+RUN emerge -uDUN @world
+RUN emerge --depclean
+RUN emerge @preserved-rebuild
+RUN if ! mountpoint /var/db/repos/gentoo; then rm -rf /var/db/repos/gentoo; fi
+RUN if ! mountpoint /var/cache/distfiles; then rm -rf /var/cache/distfiles/*; fi
