--- a/devtools/Dockerfile
+++ b/devtools/Dockerfile
@@ -5,5 +5,11 @@ RUN emerge-webrsync
 RUN emerge -uDUN @world
 RUN emerge --depclean
 RUN emerge @preserved-rebuild
-RUN emerge -u dev-vcs/git sys-devel/clang dev-lang/rust app-portage/repoman app-eselect/eselect-repository dev-lang/go
+RUN emerge -u sys-devel/clang
+RUN emerge -u dev-lang/rust
+RUN emerge -u dev-vcs/git
+RUN emerge -u app-portage/repoman
+RUN emerge -u app-eselect/eselect-repository
+RUN emerge -u dev-lang/go
+RUN emerge -u app-arch/tatt
 RUN eselect news read --quiet
